--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.app-container {
+  max-width: 100vw;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -46,6 +50,13 @@ th,
 td {
   padding: 0 2rem;
   border-left: 1px solid #666;
+}
+
+@media screen and (max-width: 1000px) {
+  th,
+  td {
+    padding: 0 10px;
+  }
 }
 
 thead th {
@@ -126,7 +137,7 @@ a:link,
 }
 
 summary {
-  margin-bottom: 45.550px;
+  margin-bottom: 45.55px;
   cursor: pointer;
   font-size: 1.5em;
   font-weight: bold;
@@ -163,6 +174,14 @@ h3 {
 }
 .popover-button span {
   display: block;
+}
+
+.journeys-container {
+  overflow: auto;
+}
+
+.journeys-list {
+  margin-bottom: 45.55px;
 }
 
 @media screen and (max-width: 1000px) {
